--- a/example/package.json
+++ b/example/package.json
@@ -2,7 +2,7 @@
   "name": "serialportron",
   "productName": "Serialportron",
   "author": "Sung Hah Hwang",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "license": "",
   "repository": {
     "type": "git",
@@ -33,51 +33,52 @@
   "private": false,
   "dependencies": {
     "@agm/core": "1.0.0-beta.2",
-    "@angular/cdk": "6.1.0",
-    "@angular/common": "6.0.2",
-    "@angular/compiler": "6.0.2",
-    "@angular/core": "6.0.2",
-    "@angular/forms": "6.0.2",
-    "@angular/http": "6.0.2",
-    "@angular/platform-browser": "6.0.2",
-    "@angular/platform-browser-dynamic": "6.0.2",
-    "@angular/platform-server": "6.0.2",
-    "@angular/router": "6.0.2",
+    "@angular/cdk": "^7.3.5",
+    "@angular/common": "^7.2.15",
+    "@angular/compiler": "^7.2.15",
+    "@angular/core": "^7.2.15",
+    "@angular/forms": "^7.2.15",
+    "@angular/http": "^7.2.15",
+    "@angular/platform-browser": "^7.2.15",
+    "@angular/platform-browser-dynamic": "^7.2.15",
+    "@angular/platform-server": "7.2.15",
+    "@angular/router": "^7.2.15",
     "@types/serialport": "^6.0.3",
     "bootstrap": "^4.1.2",
-    "core-js": "2.4.1",
-    "rxjs": "6.1.0",
-    "rxjs-compat": "6.1.0",
+    "core-js": "^2.6.5",
+    "rxjs": "^6.5.2",
+    "rxjs-compat": "^6.4.0",
     "serialport": "^6.2.1",
     "stream-http": "github:node-influx/stream-http",
     "uglify-js": "^3.3.26",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.6.3",
-    "@angular/cli": "6.0.3",
-    "@angular/compiler-cli": "6.0.2",
+    "@angular-devkit/build-angular": "^0.13.9",
+    "@angular/cli": "^7.3.9",
+    "@angular/compiler-cli": "^7.2.15",
     "@types/bootstrap": "3.3.32",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "6.0.73",
-    "codelyzer": "4.3.0",
+    "@types/jasmine": "^3.3.12",
+    "@types/node": "^12.0.1",
+    "codelyzer": "^5.0.1",
     "electron": "2.0.4",
     "electron-builder": "20.14.7",
     "electron-rebuild": "^1.8.1",
     "electron-reload": "^1.2.2",
-    "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "3.2.0",
-    "karma": "^2.0.4",
-    "karma-chrome-launcher": "2.0.0",
-    "karma-cli": "1.0.1",
+    "jasmine-core": "^3.4.0",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^4.1.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-cli": "^2.0.0",
     "karma-coverage-istanbul-reporter": "0.2.0",
-    "karma-jasmine": "1.1.0",
-    "karma-jasmine-html-reporter": "0.2.2",
+    "karma-jasmine": "^2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
     "npm-run-all": "^4.1.3",
-    "protractor": "^5.3.2",
+    "protractor": "^5.4.2",
+    "rxjs-tslint": "^0.1.7",
     "ts-node": "2.0.0",
-    "tslint": "5.9.1",
-    "typescript": "~2.7.0",
+    "tslint": "^5.16.0",
+    "typescript": "^3.1.1",
     "update": "^0.7.4",
     "wait-on": "^2.1.0"
   }
